Update LIFF_ID and GAS_ENDPOINT to production values

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
 
   <script>
     /* ====================  🔧 需替換為「正式值」  ==================== */
-    const LIFF_ID = "2008199393-AMqeEVBY";              // ← 改成正式 LIFF_ID
-    const GAS_ENDPOINT = "https://script.google.com/macros/s/AKfycbz81CJcKY9WsjzTBJBw1v_tVpjiiCc_EfNZr_QUaPsQ7DfTqlG8llSVC08o8mu8kvpM/exec"; // ← 改成正式 Apps Script /exec
+    const LIFF_ID = "2008199393-NjOGJm4P";              // ← 改成正式 LIFF_ID
+    const GAS_ENDPOINT = "https://script.google.com/macros/s/AKfycbyPFJLb4cGMELLljDXB5-Pl6fEg_doulaksba1p6hHAGvqcv1WYGa3Mr7yUQoYPAYDGKw/exec"; // ← 改成正式 Apps Script /exec
     /* =============================================================== */
 
     // 時段定義
