Refactor CSS comments and improve text clarity

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>吉恩冰塊 訂單表單</title>
   <style>
-    /* --- 你的原本 CSS (保持不變) --- */
+    /* 你的原本 CSS（照你之前給的）*/
     :root {
       --bd:#e5e7eb; --info:#f8fafc; --info-bd:#cbd5e1;
-      --primary:#111827;              /* 主色：近黑 */
+      --primary:#111827;
       --primary-contrast:#fff;
       --ok-bg:#d1fae5; --ok-bd:#10b981; --ok-fg:#065f46;
     }
@@ -30,25 +30,40 @@
     .row { margin:8px 0; }
 
     .btn, input[type="submit"], input[type="reset"], button {
-      color:#111827 !important; -webkit-text-fill-color:#111827 !important;
-      background:#fff; border:1px solid var(--bd); font-size:16px; line-height:1.2; border-radius:10px; padding:10px 14px;
-      -webkit-appearance:none; appearance:none; cursor:pointer;
+      color:#111827 !important;
+      -webkit-text-fill-color:#111827 !important;
+      background:#fff; border:1px solid var(--bd);
+      font-size:16px; line-height:1.2; border-radius:10px;
+      padding:10px 14px;
+      -webkit-appearance:none; appearance:none;
+      cursor:pointer;
       transition: transform .02s ease, box-shadow .2s ease;
     }
     .btn:active { transform: translateY(1px); }
     .btn-primary {
-      background: var(--primary); color: var(--primary-contrast) !important; -webkit-text-fill-color: var(--primary-contrast) !important;
-      border:1px solid var(--primary); box-shadow:0 6px 18px rgba(17,24,39,.15); font-weight:600;
+      background: var(--primary);
+      color: var(--primary-contrast) !important;
+      -webkit-text-fill-color: var(--primary-contrast) !important;
+      border:1px solid var(--primary);
+      box-shadow:0 6px 18px rgba(17,24,39,.15);
+      font-weight:600;
     }
     .btn-primary:disabled { opacity:.6; cursor:not-allowed; box-shadow:none; }
 
     .seg { display:flex; gap:10px; align-items:center; flex-wrap:wrap; }
     .seg .opt {
-      border:2px solid var(--bd); border-radius:12px; padding:10px 14px; cursor:pointer; user-select:none;
+      border:2px solid var(--bd); border-radius:12px;
+      padding:10px 14px; cursor:pointer; user-select:none;
       transition:border-color .15s ease, box-shadow .15s ease;
     }
-    .seg .opt[aria-pressed="true"] { border-color:var(--primary); box-shadow:0 0 0 3px rgba(17,24,39,.12); font-weight:600; }
-    .seg .opt[aria-disabled="true"] { opacity:.45; cursor:not-allowed; }
+    .seg .opt[aria-pressed="true"] {
+      border-color:var(--primary);
+      box-shadow:0 0 0 3px rgba(17,24,39,.12);
+      font-weight:600;
+    }
+    .seg .opt[aria-disabled="true"] {
+      opacity:.45; cursor:not-allowed;
+    }
   </style>
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 </head>
@@ -56,7 +71,7 @@
   <div class="wrap">
     <div class="notice">
       <b>配送時段：</b>上午 08:00–12:00；下午 15:00–17:00。<br>
-      <span class="muted">（依下單時間 + 最多預約未來 10 天，自動限制可預約的日期與時段）</span>
+      <span class="muted">（依下單時間 + 預約範圍 10 天，自動限制可預約的日期與時段）</span>
     </div>
 
     <h1>吉恩冰塊 訂單表單</h1>
@@ -66,7 +81,7 @@
       <div class="grid">
         <div>
           <label>客戶/店家名稱
-            <input name="customerName" required placeholder="阿綸熱炒/小郭飲料店">
+            <input name="customerName" required placeholder="阿綸熱炒／小郭飲料店">
           </label>
         </div>
         <div>
@@ -75,7 +90,7 @@
           </label>
         </div>
         <div>
-          <label>電話/手機
+          <label>電話／手機
             <input name="phone" required inputmode="tel" placeholder="0912-345-678">
           </label>
         </div>
@@ -86,12 +101,11 @@
           </label>
         </div>
 
-        <!-- AM/PM 選擇 -->
         <div>
           <label>選擇配送時段</label>
           <div class="seg" role="group" aria-label="配送時段">
-            <div id="optAM"  class="opt" role="button" aria-pressed="false">上午（08:00–12:00）</div>
-            <div id="optPM"  class="opt" role="button" aria-pressed="false">下午（15:00–17:00）</div>
+            <div id="optAM" class="opt" role="button" aria-pressed="false">上午（08:00–12:00）</div>
+            <div id="optPM" class="opt" role="button" aria-pressed="false">下午（15:00–17:00）</div>
           </div>
           <div id="slotErr" class="error" style="display:none"></div>
         </div>
@@ -105,7 +119,7 @@
 
         <div>
           <label>備註
-            <textarea name="note" rows="3" placeholder="（幾點有人在? 請告知，或其它提醒示項）"></textarea>
+            <textarea name="note" rows="3" placeholder="（幾點有人在？或其它提醒事項）"></textarea>
           </label>
         </div>
       </div>
@@ -116,7 +130,7 @@
 
       <div class="row mt" style="display:flex; align-items:center; gap:10px;">
         <input id="submitBtn" type="submit" value="送出" class="btn btn-primary" style="min-width:140px">
-        <input id="resetBtn"  type="reset"  value="清空" class="btn">
+        <input id="resetBtn" type="reset" value="清空" class="btn">
         <span id="submitMsg" class="muted"></span>
       </div>
     </form>
@@ -128,8 +142,8 @@
     const LIFF_ID = "2008199393-NjOGJm4P";  // ← 請填入你的正式 LIFF_ID
     const GAS_ENDPOINT = "https://script.google.com/macros/s/AKfycbyPFJLb4cGMELLljDXB5-Pl6fEg_doulaksba1p6hHAGvqcv1WYGa3Mr7yUQoYPAYDGKw/exec";  // ← 請填入你的正式後端 endpoint
 
-    const AM = { key:"AM", start:"08:00", end:"12:00" };
-    const PM = { key:"PM", start:"15:00", end:"17:00" };
+    const AM = { key: "AM", start: "08:00", end: "12:00" };
+    const PM = { key: "PM", start: "15:00", end: "17:00" };
 
     const $ = s => document.querySelector(s);
     const byName = n => document.querySelector(`[name="${n}"]`);
@@ -137,40 +151,43 @@
     const optAM = $("#optAM"), optPM = $("#optPM");
     const dateHelp = $("#dateHelp");
 
-    function toISO(d){
+    function toISODate(d) {
       const y = d.getFullYear();
-      const m = String(d.getMonth()+1).padStart(2,"0");
-      const da = String(d.getDate()).padStart(2,"0");
+      const m = String(d.getMonth() + 1).padStart(2, "0");
+      const da = String(d.getDate()).padStart(2, "0");
       return `${y}-${m}-${da}`;
     }
-    function getToday(){ return toISO(new Date()); }
-    function getTomorrow(){ const d = new Date(); d.setDate(d.getDate()+1); return toISO(d); }
-    function getMaxDate(daysAhead){
+    function getToday() {
+      return toISODate(new Date());
+    }
+    function getTomorrow() {
+      const d = new Date();
+      d.setDate(d.getDate() + 1);
+      return toISODate(d);
+    }
+    function getMaxDate(daysAhead) {
       const d = new Date();
       d.setDate(d.getDate() + daysAhead);
-      return toISO(d);
+      return toISODate(d);
     }
 
-    // 判斷目前是否允許當天 + 哪個時段
-    function computeAllowForNow(){
+    function computeAllowForNow() {
       const now = new Date();
-      const hm = now.getHours()*60 + now.getMinutes();
-      const MIN_07 = 7*60;
-      const MIN_13 = 13*60;
+      const hm = now.getHours() * 60 + now.getMinutes();
+      const MIN_07 = 7 * 60;
+      const MIN_13 = 13 * 60;
 
-      // 00:00–06:59 → 今天允許 AM/PM
       if (hm < MIN_07) {
         return { allowToday: true, allowAM: true, allowPM: true, note: "現在是凌晨，可預約當日任一時段" };
       }
-      // 07:00–12:59 → 今天僅允許 下午
       if (hm >= MIN_07 && hm < MIN_13) {
         return { allowToday: true, allowAM: false, allowPM: true, note: "今天僅可預約下午 (15:00–17:00)" };
       }
-      // 13:00–23:59 → 今天不允許，從明天起 AM/PM 都可
+      // 13:00–23:59 → 今天不可
       return { allowToday: false, allowAM: true, allowPM: true, note: "現在時間超過 13:00，今日已關閉，請選明天起配送" };
     }
 
-    function refreshDateAndSlot(){
+    function refreshDateAndSlot() {
       const allow = computeAllowForNow();
       const minDate = allow.allowToday ? getToday() : getTomorrow();
       const maxDate = getMaxDate(10);
@@ -193,8 +210,8 @@
       const canAM = isToday ? allow.allowAM : true;
       const canPM = isToday ? allow.allowPM : true;
 
-      optAM.setAttribute("aria-disabled", canAM ? "false":"true");
-      optPM.setAttribute("aria-disabled", canPM ? "false":"true");
+      optAM.setAttribute("aria-disabled", canAM ? "false" : "true");
+      optPM.setAttribute("aria-disabled", canPM ? "false" : "true");
       optAM.style.opacity = canAM ? 1 : 0.45;
       optPM.style.opacity = canPM ? 1 : 0.45;
 
@@ -203,7 +220,7 @@
       else selectSlot(null);
     }
 
-    function selectSlot(slotKey){
+    function selectSlot(slotKey) {
       const st = byName("startTime"), et = byName("endTime"), sl = byName("slot");
       if (slotKey === AM.key) {
         st.value = AM.start; et.value = AM.end; sl.value = AM.key;
@@ -220,8 +237,12 @@
       }
     }
 
-    optAM.addEventListener("click", ()=>{ if (optAM.getAttribute("aria-disabled")==="false") selectSlot(AM.key); });
-    optPM.addEventListener("click", ()=>{ if (optPM.getAttribute("aria-disabled")==="false") selectSlot(PM.key); });
+    optAM.addEventListener("click", () => {
+      if (optAM.getAttribute("aria-disabled") === "false") selectSlot(AM.key);
+    });
+    optPM.addEventListener("click", () => {
+      if (optPM.getAttribute("aria-disabled") === "false") selectSlot(PM.key);
+    });
     orderDateEl.addEventListener("change", refreshDateAndSlot);
 
     async function initLiffFlow(){
@@ -231,18 +252,18 @@
           liff.login({ redirectUri: window.location.href });
           return;
         }
-        // 若需要 load profile + defaults, 可以放你原本 loadDefaults code
-      } catch (err) {
+        // 你原本的 loadDefaults / profile code 可放在這
+      } catch(err) {
         console.error("liff.init 失敗", err);
       }
     }
 
-    document.getElementById("orderForm").addEventListener("submit", async (e)=>{
+    document.getElementById("orderForm").addEventListener("submit", async (e) => {
       e.preventDefault();
       const btn = $("#submitBtn"), msg = $("#submitMsg");
       msg.className = "muted"; msg.textContent = "送出中…"; btn.disabled = true;
 
-      refreshDateAndSlot();  // 再檢查一次
+      refreshDateAndSlot();  // 再確認一次條件
 
       if (!byName("slot").value) {
         $("#slotErr").style.display = "block";
@@ -278,7 +299,7 @@
         const p = new URLSearchParams();
         p.set("id_token", idToken);
         ["customerName","address","phone","orderDate","startTime","endTime","qty","note","slot"]
-          .forEach(k => p.set(k, (fd.get(k)||"").toString().trim()));
+          .forEach(k => p.set(k, (fd.get(k) || "").toString().trim()));
 
         const controller = new AbortController();
         const timer = setTimeout(() => controller.abort(), 15000);
@@ -290,10 +311,10 @@
         });
         clearTimeout(timer);
 
-        const json = await res.json().catch(_ => ({}));
+        const json = await res.json().catch(_=>({}));
         if (!res.ok || !json.ok) throw new Error(json.message || `HTTP ${res.status}`);
 
-        // 若有 userId 儲存 defaults...
+        // 若有 userId，儲存 defaults (如你原本那樣)  
         if (window.__USER_ID__) {
           const defaults = {
             customerName: byName("customerName").value.trim(),
@@ -312,7 +333,7 @@
 
         e.target.reset();
         refreshDateAndSlot();
-      } catch (err) {
+      } catch(err) {
         console.error(err);
         msg.className = "error";
         msg.textContent = "❌ " + (err.message || err);
